Support for "for loops", eval, stack traces etc. Up to 943/40k suites running or about 2.5% of the tests I am targeting at the moment.

--- a/test_262/Cargo.toml
+++ b/test_262/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 compiler = { path = "../compiler" }
 anyhow = "1.0.38"
 colored = "2.0.0"
+log = { version = "0.4", features = ["max_level_trace"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
