--- a/test_262/Cargo.toml
+++ b/test_262/Cargo.toml
@@ -13,3 +13,5 @@ colored = "2.0.0"
 log = { version = "0.4", features = ["max_level_trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
+serde_json = "1.0.64"
+clap = "2.33.3"
