Run suite with `-c` flag

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,4 +19,4 @@ jobs:
       with:
         submodules: 'true'
     - name: Build
-      run: cargo build --release && cd ./test_262/ && ../target/release/test_262
+      run: cargo build --release && cd ./test_262/ && ../target/release/test_262 -c
