--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
-debug = true
+#debug = true
+
+[features]
+default = []
+eval = []
 
 [dependencies]
-anyhow="1.0.37"
 log={ version = "0.4.14" }
-pretty_env_logger="0.4.0"
 logos = "0.12.0"
-thiserror = "1.0"
-colored = "2.0.0"
-arr_macro = "0.1.3"
-builtin = { path = "../builtin" }
-rand = "0.8.3"
+instruction_set = { path = "../instruction_set" }
+anyhow = "1.0.38"
