--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "compiler"
+name = "glide_compiler"
 version = "0.1.0"
 authors = ["Michael Oates <michael@oates.dev>"]
 edition = "2018"
