Fixed up testing time, down to ~4ms of actual test time (from peak of 20ms).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ members = [
     "test_262",
     "builtin",
     "instruction_set",
-    "runtime"
+    "runtime",
+    "compiler_binary"
 ]
 
 [profile.release]
 #opt-level = 3
-#debug = true
+debug = true
