--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -3,6 +3,9 @@ name = "glide_runtime"
 version = "0.1.0"
 authors = ["Michael Oates <michael@oates.dev>"]
 edition = "2018"
+license = "MIT"
+categories = ["js"]
+description = "GlideJS Runtime"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
