--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -10,6 +10,7 @@ eval = []
 
 [dependencies]
 log={ version = "0.4.14" }
-logos = "0.12.0"
+logos = "0.12.1"
 instruction_set = { path = "../instruction_set" }
 anyhow = "1.0.38"
+itertools="0.10.5"
