Lots of fixes: * Implement improvements to how resolution of bindings works - particularly for vars which are now scoped correctly and not initialised until used. * Optimise passing of parameters to methods by removing `RESOLVE` instructions for parameters. * Fix parsing of void expressions * Ensure assignments are treated as expressions * Fix `ToUInt32` behaviour for negative numbers

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -2,7 +2,7 @@
 name = "glide_runtime"
 version = "0.1.0"
 authors = ["Michael Oates <michael@oates.dev>"]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 categories = ["js"]
 description = "GlideJS Runtime"
@@ -24,6 +24,7 @@ log={ version = "0.4.14" }
 rand = "0.8.3"
 ahash = "0.7.2"
 better_any = "0.2.0"
+stash = "0.1.5"
 chrono = { optional = true, version = "0.4.24" }
 
 glide_compiler = { optional = true, path = "../compiler", features=["eval"] }
